@@ -264,6 +264,10 @@ class Meeting(BaseMeeting):
         return anno['invited_people']
 
     def get_saved_location(self):
+        location = self.getMeetinglocation()
+        if location is None:
+            return {}
+
         anno = self._get_annotations()
         if anno.get('saved_location', None) is None:
             anno['saved_location'] = PersistentDict()
